--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <div class="left">
-                <a href="portfolio.html" class="logos">Shubham's portfolio</a>
+                <a href="index.html" class="logos">Shubham's portfolio</a>
                 <!-- <i class="fa-regular fa-bars" id="menu-btn"></i> -->
                 <i class="fa-solid fa-bars" id="menu-btn" onclick="openmenu()"></i>
                 <i class="fa-solid fa-times" id="close-btn" onclick="closemenu()"></i>
