--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="portfolio.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="skill.html">My  Skills</a></li>
                     <li><a href="project.html">Projects</a></li>
